Add Spring Boot starter web dependency and configure multipart file upload settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ expiration.time=43200000
 
 # logging configuration
 logging.level.org.springframework=DEBUG
+
+
+# application.properties
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.location=/tmp/uploads
